--- a/server/package.json
+++ b/server/package.json
@@ -17,9 +17,12 @@
     "cors": "^2.8.5",
     "dotenv": "^17.0.0",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.1",
     "multer": "^2.0.1",
+    "nodemailer": "^7.0.4",
     "nodemon": "^3.1.10",
+    "stripe": "^18.3.0",
     "svix": "^1.68.0"
   }
 }
